// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth state: Add - Reducer 1`] = `
Object {
  "token": "My token",
}
`;

exports[`Auth state: Clear - Reducer 1`] = `Object {}`;

exports[`Auth state: Clear 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": Object {
      "token": "My token",
    },
    "type": "TOKEN_SET",
  },
  Object {
    "meta": undefined,
    "payload": undefined,
    "type": "TOKEN_CLEAR",
  },
]
`;

exports[`Auth state: Set 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": Object {
      "token": "My token",
    },
    "type": "TOKEN_SET",
  },
]
`;
